--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -27,12 +33,8 @@ p {
 
 aside {
     width: 20em;
-    margin: 1em;
-    border: 1px solid rgba(0, 0, 0, 0.2); /* why use rgba instead of hex here? */
-    padding: 1em;
-    background-color: #eee;
-    color: #333;
     text-align: center;
+    position: relative;
   }
 
   aside img {
@@ -40,16 +42,41 @@ aside {
     height: auto;
   }
 
+  aside h2 {
+    position: absolute;
+    top: 47px;
+    left: 140px;
+
+  }
+  
+  
   main img {
     width: 150px;
     height: auto;
     border: 1px solid rgb(2, 21, 46);
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    margin: 0 0 1rem 1rem;
+    float: right;
   }
 
   footer {
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
+  }
+
+  main h1,p {
+    padding: 1rem;
+    }
+
+/* Class Selectors */
+
+  .box {
+    margin: 1rem;
+    border: 1px solid rgba(0,0,0,.2);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+    
   }
