--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,8 +6,8 @@
     --accent1-color: #F4A261;
     --accent2-color: #E76F51;
   
-    --heading-font: 'cyrillic', serif;
-    --paragraph-font: 'vietnamese', serif;
+    --heading-font: 'Merriweather', sans-serif;
+    --paragraph-font: 'Roboto', sans-serif;
   
     --nav-background-color: #264653;
     --nav-link-color: #2A9D8F;
