--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -35,6 +35,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 28px;
     color: white;
     text-shadow: 2px 2px 4px #0000;
   }
