--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,19 +4,27 @@
   box-sizing: border-box;
 }
 
+/*Use CSS Flex to make the navigation links display horizontally across the screen*/
 nav {
-    background-color: steelblue;
-    padding: 10px;
+  
+      background-color: steelblue;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
   }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    
 }
 
 h1 {
     color: steelblue;
+    border-bottom: #000;
   }
 
 img {
@@ -31,11 +39,6 @@ p {
     padding: 0px;
   }
 
-aside {
-    width: 20em;
-    text-align: center;
-    position: relative;
-  }
 
   aside img {
     width: 200px;
@@ -70,6 +73,12 @@ aside {
     padding: 1rem;
     }
 
+    /* to center the content on the page */
+    header, footer {
+      max-width: 840px;
+      margin: 0 auto;
+    }
+
 /* Class Selectors */
 
   .box {
@@ -80,3 +89,29 @@ aside {
     color: #000;
     
   }
+
+  /*CSS grid display with the aside on the left and the main element on the right */
+  
+  header, .grid, footer {
+    max-width: 820px;
+    margin: 0 auto;
+  }
+
+    .grid {
+      display: grid;
+      align-items: center;
+    }
+    
+    main {
+      grid-column: 2/3;
+      margin: 1rem;
+    }
+    
+    aside {
+      text-align: center;
+      width: 20rem;
+      position: relative;
+      grid-column: 1/2;
+      grid-row: 1/2;
+    }
+  
