--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,19 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap');
 
 :root {
-    --primary-color: #264653;
-    --secondary-color: #2A9D8F;
-    --accent1-color: #F4A261;
-    --accent2-color: #E76F51;
+    --primary-color: #E63946;
+    --secondary-color:#457B9D;
+    --accent1-color: #1D3557;
+    --accent2-color: #A8DADC;
   
     --heading-font: 'Merriweather', sans-serif;
     --paragraph-font: 'Roboto', sans-serif;
   
-    --nav-background-color: #264653;
-    --nav-link-color: #2A9D8F;
-    --nav-hover-link-color: #F4A261;
-    --nav-hover-background-color: #E76F51;
+    --nav-background-color: #1D3557;
+    --nav-link-color: #457B9D;
+    --nav-hover-link-color: #E63946;
+    --nav-hover-background-color: #A8DADC;
   }
+
 
   body {
     max-width: 960px;
