--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -27,7 +27,14 @@
       width: 180px;
       height: 120px;
     }
-  }
+    .image-grid img {
+      max-width: 90%; /* increase the max-width to make the images bigger */
+      height: auto;
+      box-shadow: 3px 3px 30px gray;
+      border-radius: 4px;
+    }
+    } 
+  
 
 .hero {
   position: relative;
@@ -109,16 +116,22 @@
     background-color: var(--nav-hover-background-color);
   }
 
-  header, .grid, footer {
+  /*header, .grid,footer {
     max-width: 1000rem;
     margin: 0 auto;
-  }
+  } */
 
     .grid {
       display: grid;
       align-items: center;
     }
-    
+
+    .grid2 {
+      display: grid;
+      align-items: center;
+      margin-left: 20%;
+    }
+
     header nav {
       grid-column: 2/3;
       margin: 1rem;
@@ -142,28 +155,33 @@ section p {
       justify-content: space-evenly;
       padding-right: 12rem;
 }
-.history {
-  position: relative;
-      grid-column: 1/2;
-      grid-row: 1/2;
-      padding-left: 20rem;
 
-}
 figcaption {
   background-color: #222;
   color: #fff;
   font: var(--paragraph-font);
   padding: 3px;
   text-align: center;
+  box-shadow: 7px 7px 30px gray;
+  border-radius: 4px;
 }
-figure {
+.history {
   
   display: flex;
   flex-flow: column;
   padding: 5px;
   max-width: 220px;
   margin: auto;
+  
 }
+
+/*.adventure{
+ 
+ 
+  box-shadow: 3px 3px 30px gray;
+  border-radius: 4px;
+  height: auto;
+} */
 
 /* Display images in grid form*/
 
@@ -171,10 +189,11 @@ figure {
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 3 columns */
   grid-template-rows: repeat(2, 1fr); /* 2 rows */
-  gap: 20px; /* gap between images */
+  gap: 10px; /* gap between images */
 }
+
 .image-grid img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   box-shadow: 3px 3px 30px gray;
   border-radius: 4px;
