--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,6 +15,16 @@
     --nav-hover-background-color: #A8DADC;
   }
   @media (max-width: 768px) {
+   /* nav {
+      flex-direction: column;
+      align-items: stretch;
+    }
+    
+    nav a {
+      padding: 0.5rem;
+      text-align: center;
+      border-top: 1px solid var(--nav-background-color);
+    } */
     .hero {
       height: 300px;
     }
