--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -3,7 +3,7 @@
     #design {
     margin-bottom: 20px;
     background: #808080;
-    width:  35%;
+    width:  500px;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -11,7 +11,7 @@
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 5px;
-    font-size: 25px;
+    font-size: 20px;
     text-align: left;
     border-radius: 10px;
     color: #fff;
@@ -34,7 +34,7 @@
         
      
     #q1, #q2, #q3, #q4 {
-    width: 100%;
+    width: 93%;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #fff;
@@ -59,7 +59,7 @@
     cursor: pointer;
     font-size: 16px;
     align-items: center;
-    margin-left: 22%;
+    margin-left: 15%;
     width: 350px;
     
     }
