--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -96,6 +96,10 @@
     font-family: var(--heading-font);
     color: var(--primary-color);
   }
+  h3{
+    font-family: var(--heading-font);
+    color: var(--nav-background-color); 
+  }
 
   header {
     padding: 13px;
@@ -227,3 +231,77 @@ figcaption {
   margin-left: 10px; /* Add some space between the images */ 
   
 }
+
+hr{
+  color: #E63946;
+}
+
+    
+    #design {
+    margin-bottom: 20px;
+    background: #808080;
+    width:  35%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding: 5px;
+    font-size: 25px;
+    text-align: left;
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 0 30px gray;
+    
+    }
+    
+     
+    #p1 {
+        font-size: 28px;
+        font-weight: bold;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        color: #000080;
+        font-size: 35px;
+       
+        
+        }
+        
+     
+    #q1, #q2, #q3, #q4 {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #fff;
+    margin-bottom: 10px;
+    
+    }
+    
+    /*#q1, #q2, #q3, #q4 :focus {
+       
+        border: 3px solid #06f;
+        box-shadow: 2px 2px 20px gray;
+        }
+        */
+        
+    
+    #submit {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    align-items: center;
+    margin-left: 22%;
+    width: 350px;
+    
+    }
+    
+    #submit:hover {
+    background-color: #3e8e41;
+    }
+
