--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,36 +14,6 @@
     --nav-hover-link-color: #E63946;
     --nav-hover-background-color: #A8DADC;
   }
-  @media (max-width: 768px) {
-   /* nav {
-      flex-direction: column;
-      align-items: stretch;
-    }
-    
-    nav a {
-      padding: 0.5rem;
-      text-align: center;
-      border-top: 1px solid var(--nav-background-color);
-    } */
-    .hero {
-      height: 300px;
-    }
-    
-    .hero-title {
-      font-size: 24px;
-    }
-    
-    .article-image {
-      width: 180px;
-      height: 120px;
-    }
-    .image-grid img {
-      max-width: 90%; /* increase the max-width to make the images bigger */
-      height: auto;
-      box-shadow: 3px 3px 30px gray;
-      border-radius: 4px;
-    }
-    } 
   
 
 .hero {
@@ -98,9 +68,14 @@
   }
   h3{
     font-family: var(--heading-font);
-    color: var(--nav-background-color); 
+    color: var(--secondary-color); 
   }
-
+h3 a{
+  color: var(--nav-hover-link-color);
+}
+h3 a:hover{
+  color: var(--nav-background-color);
+}
   header {
     padding: 13px;
     background-color: var(--accent1-color);
@@ -202,13 +177,13 @@ figcaption {
 .image-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  grid-template-rows: repeat(2, 1fr); /* 2 rows */
-  gap: 10px; /* gap between images */
+  
 }
 
 .image-grid img {
-  max-width: 100%;
-  height: auto;
+  display: inline-block;
+  max-width: 23rem;
+  height: 20rem;
   box-shadow: 3px 3px 30px gray;
   border-radius: 4px;
 }
@@ -233,75 +208,78 @@ figcaption {
 }
 
 hr{
-  color: #E63946;
+  border: 1px solid #E63946;
 }
 
-    
-    #design {
-    margin-bottom: 20px;
-    background: #808080;
-    width:  35%;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding: 5px;
-    font-size: 25px;
-    text-align: left;
-    border-radius: 10px;
-    color: #fff;
-    box-shadow: 0 0 30px gray;
-    
-    }
-    
-     
-    #p1 {
-        font-size: 28px;
-        font-weight: bold;
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        color: #000080;
-        font-size: 35px;
-       
-        
-        }
-        
-     
-    #q1, #q2, #q3, #q4 {
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #fff;
-    margin-bottom: 10px;
-    
-    }
-    
-    /*#q1, #q2, #q3, #q4 :focus {
-       
-        border: 3px solid #06f;
-        box-shadow: 2px 2px 20px gray;
-        }
-        */
-        
-    
-    #submit {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    align-items: center;
-    margin-left: 22%;
-    width: 350px;
-    
-    }
-    
-    #submit:hover {
-    background-color: #3e8e41;
-    }
 
+    
+#design {
+  margin-bottom: 20px;
+  background: #808080;
+  width:  500px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  padding: 5px;
+  font-size: 20px;
+  text-align: left;
+  border-radius: 10px;
+  color: #fff;
+  box-shadow: 0 0 30px gray;
+  
+  
+  }
+  
+   
+  #p1 {
+      font-size: 23px;
+      font-weight: bold;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      color: #000080;
+      font-size: 35px;
+     
+      
+      }
+      
+   
+  #q1, #q2, #q3, #q4 {
+  width: 90%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  margin-bottom: 10px;
+  
+  
+  }
+  
+  /*#q1, #q2, #q3, #q4 :focus {
+     
+      border: 3px solid #06f;
+      box-shadow: 2px 2px 20px gray;
+      }
+      */
+      
+  
+  #submit {
+  background-color: var(--accent1-color);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  align-items: center;
+  margin-left: 15%;
+  width: 350px;
+  
+  }
+  
+  #submit:hover {
+  background-color: var(--secondary-color);
+  }
+  
